Changes in frontend

--- a/index.html
+++ b/index.html
@@ -1,81 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/studytezorg.png" />
+    <link rel="icon" type="image/svg+xml" href="/studytez_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Studytez | Study in UK, USA, Canada, Australia & Europe
-    </title>
 
+    <!-- Primary Meta Tags -->
+    <title>
+      Studytez | Trusted Study Abroad Consultant for UK, Canada, USA & More
+    </title>
     <meta
       name="description"
-      content="Studytez offers expert guidance for students to study in UK, USA, Canada, Australia, and Europe. Get help with admissions, visas, scholarships & more."
+      content="Studytez is a trusted overseas education consultancy guiding students to study in the UK, Canada, USA, Australia, and Europe. Get expert help with university admissions, student visas, scholarships, and more."
     />
-
     <meta
       name="keywords"
-      content="study abroad, study in UK, study in USA, study in Canada, study in Australia, Einstro, overseas education, study in Europe, scholarships, student visa"
+      content="study abroad consultant, study in UK, study in Canada, study in USA, study in Australia, study in Europe, overseas education, student visa, scholarships, Studytez, best study abroad consultancy"
     />
 
-    <link rel="canonical" href="https://www.einstrostudyabroad.com/" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.studytez.com/" />
 
+    <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="Studytez | Study in Top Countries with Expert Guidance"
+      content="Studytez | Trusted Overseas Education Consultant for Top Countries"
     />
     <meta
       property="og:description"
-      content="Dreaming of studying abroad? Einstro helps you apply to top universities in the UK, USA, Canada, and more with complete support."
+      content="Looking to study abroad? Studytez offers expert counseling and support for UK, Canada, USA, Australia & more. Apply to top universities with our guidance."
     />
     <meta
       property="og:image"
-      content="https://www.einstrostudyabroad.com/assets/banner.jpg"
+      content="https://www.studytez.com/assets/banner.jpg"
     />
-    <meta property="og:url" content="https://www.einstrostudyabroad.com/" />
+    <meta property="og:url" content="https://www.studytez.com/" />
     <meta property="og:type" content="website" />
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Studytez | Study in UK, USA, Canada & More"
+      content="Studytez | Study in UK, Canada, USA & More with Expert Guidance"
     />
     <meta
       name="twitter:description"
-      content="Plan your overseas education with Einstro. Complete assistance for top universities, visas & scholarships."
+      content="Get full support from Studytez for your study abroad journey – from choosing a course to getting a student visa. Explore top universities globally."
     />
     <meta
       name="twitter:image"
-      content="https://www.einstrostudyabroad.com/assets/banner.jpg"
+      content="https://www.studytez.com/assets/banner.jpg"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="robots" content="index, follow"/>
+    <meta name="robots" content="index, follow" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-  />
-
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx">
-
-    </script>
+    <script type="module" src="/src/main.jsx"></script>
     <script>
-      document.addEventListener('contextmenu', function(e) {
-    if (e.target.tagName === 'IMG') {
-      e.preventDefault();
-    }
-  });
+      document.addEventListener("contextmenu", function (e) {
+        if (e.target.tagName === "IMG") {
+          e.preventDefault();
+        }
+      });
 
-  const params = new URLSearchParams(window.location.search);
-    const token = params.get("token");
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get("token");
 
-    if (token && window.opener) {
-      window.opener.postMessage({ token }, window.location.origin);
-      window.close();
-    }
+      if (token && window.opener) {
+        window.opener.postMessage({ token }, window.location.origin);
+        window.close();
+      }
     </script>
   </body>
 </html>
